minikube/root/resources/deployment/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: formix-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: formix.local.org
#    - host: timber-proteins-phys-eagles.trycloudflare.com   # 👈 IMPORTANT (allow all hosts)
      http:
        paths:
          - path: /dashboard
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80

          # Angular frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: formix-ui-service
                port:
                  number: 80

          # API → Gateway
          - path: /dev
            pathType: Prefix
            backend:
              service:
                name: dev-ms-gateway
                port:
                  number: 8080

          - path: /dev-auth-server
            pathType: Prefix
            backend:
              service:
                name: dev-auth-server
                port:
                  number: 8000

          - path: /dev-integration
            pathType: Prefix
            backend:
              service:
                name: dev-integration
                port:
                  number: 8001

          - path: /dev-sandbox
            pathType: Prefix
            backend:
              service:
                name: dev-sandbox
                port:
                  number: 8002

          - path: /dev-email-server
            pathType: Prefix
            backend:
              service:
                name: dev-email-server
                port:
                  number: 8003

          - path: /dev-form-registry
            pathType: Prefix
            backend:
              service:
                name: dev-form-registry
                port:
                  number: 8004

          - path: /dev-record-server
            pathType: Prefix
            backend:
              service:
                name: dev-record-server
                port:
                  number: 8005

          # Jenkins
          - path: /jenkins
            pathType: Prefix
            backend:
              service:
                name: jenkins-stf
                port:
                  number: 8080

          # Nexus UI
          - path: /nexus
            pathType: Prefix
            backend:
              service:
                name: nexus-stf
                port:
                  number: 8081

          # Nexus Docker Registry
          - path: /nexus-registry
            pathType: Prefix
            backend:
              service:
                name: nexus-stf
                port:
                  number: 5000
